--- a/asset/css/about.css
+++ b/asset/css/about.css
@@ -136,6 +136,7 @@
 .about-profile-icon img {
 	width: 106px;
 	height: 106px;
+  border-radius: 50%;
 }
 .about-profile-founder {
 	margin-bottom: 20px;
